<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- TODO: Add necessary string values -->
    <string name="app_name">Political Preparedness</string>
    <string name="str_upcoming_election">Upcoming Elections</string>
    <string name="str_saved_election">Saved Elections</string>
    <string name="str_find_my_representatives">Find My Representatives</string>

    <string name="str_election_name">Election Name</string>
    <string name="str_election_detail">Election Detail</string>
    <string name="str_election_information">Election Information</string>
    <string name="str_voting_location">Voting Location</string>
    <string name="str_ballot_information">Ballot Information</string>
    <string name="str_follow_election">Follow Election</string>
    <string name="str_unfollow_election">Unfollow Election</string>

    <string name="str_political_preparedness">Political Preparedness</string>
    <string name="str_representative_search">Representative Search</string>
    <string name="str_address_line1">Address Line 1</string>
    <string name="str_address_line2">Address Line 2</string>
    <string name="str_city">City</string>
    <string name="str_zip">Zip</string>
    <string name="str_fnd_my_representatives">Find My Representatives</string>
    <string name="str_use_my_location">Use my location</string>
    <string name="str_my_representatives">My Representatives</string>

    <string name="str_position">Position</string>
    <string name="str_name">Name</string>
    <string name="str_party">Party</string>

    <string name="str_no_data">No Information</string>
    <string name="str_voter_info_error">No information for this election.</string>
    <string name="str_network_error">Network Error</string>
    <string name="str_check_connection">Network Error. Please check your internet.</string>

    <string name="str_state_correspondence">State Correspondence</string>

    <string name="str_permission_denied">Location permission was not granted.</string>
    <string name="str_settings">Settings</string>

</resources>
