<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- TODO: Add data binding node for Voter Info ViewModel -->
    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="@{viewModel.showLoading ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{viewModel.showLoading ? View.GONE : View.VISIBLE}">

            <TextView
                android:id="@+id/noDataTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_no_data"
                android:gravity="center"
                android:text="@{viewModel.errorInfo}"
                android:textSize="@dimen/text_size_large"
                android:visibility="@{viewModel.hasError ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="@{viewModel.hasError ? View.GONE : View.VISIBLE}">

                <!-- TODO: Add title to toolbar -->
                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/election_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:padding="@dimen/default_padding"
                    android:singleLine="true"
                    app:layout_constraintTop_toTopOf="parent"
                    app:title="@{viewModel.voterInfo.election.name}"
                    app:titleTextColor="@color/white" />

                <!-- TODO: Add visual styling -->
                <TextView
                    android:id="@+id/election_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_padding"
                    android:text="@{viewModel.voterInfo.election.electionDay.toString()}"
                    app:layout_constraintTop_toBottomOf="@id/election_name"
                    tools:text="12 November 2055" />

                <!-- TODO: Add visual styling and content -->

                <!-- TODO: Add click binding to open web URL -->
                <!-- TODO: Add visual styling and content -->
                <TextView
                    android:id="@+id/state_header"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/str_election_information"
                    android:textColor="@color/gray3F"
                    app:layout_constraintEnd_toEndOf="@+id/election_date"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@id/election_date"
                    app:layout_constraintTop_toBottomOf="@id/election_date" />

                <TextView
                    android:id="@+id/state_locations"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:onClick="@{() -> viewModel.loadVotingLocations()}"
                    android:text="@string/str_voting_location"
                    app:layout_constraintEnd_toEndOf="@+id/election_date"
                    app:layout_constraintStart_toStartOf="@+id/election_date"
                    app:layout_constraintTop_toBottomOf="@id/state_header" />

                <!-- TODO: Add click binding to open web URL -->
                <!-- TODO: Add visual styling and content -->
                <TextView
                    android:id="@+id/state_ballot"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:onClick="@{() -> viewModel.loadBallotInformation()}"
                    android:text="@string/str_ballot_information"
                    app:layout_constraintEnd_toEndOf="@+id/election_date"
                    app:layout_constraintStart_toStartOf="@+id/election_date"
                    app:layout_constraintTop_toBottomOf="@id/state_locations" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/address_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:constraint_referenced_ids="state_correspondence_header,address"
                    android:visibility="@{viewModel.hasCorrespondenceAddress ? View.VISIBLE : View.GONE}"/>

                <!-- TODO: Add visual styling and content -->
                <TextView
                    android:id="@+id/state_correspondence_header"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/str_state_correspondence"
                    android:textColor="@color/gray3F"
                    app:layout_constraintEnd_toEndOf="@+id/election_date"
                    app:layout_constraintStart_toStartOf="@+id/election_date"
                    app:layout_constraintTop_toBottomOf="@id/state_ballot" />

                <!-- TODO: Add data binding -->
                <TextView
                    android:id="@+id/address"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@{viewModel.correspondenceAddress}"
                    app:layout_constraintEnd_toEndOf="@+id/election_date"
                    app:layout_constraintStart_toStartOf="@+id/election_date"
                    app:layout_constraintTop_toBottomOf="@id/state_correspondence_header" />

                <!-- TODO: Add button to save election to Room -->
                <Button
                    android:id="@+id/bt_follow_election"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:onClick="@{() -> viewModel.toggleFollowElection()}"
                    android:text="@{viewModel.isElectionFollowed() ? @string/str_unfollow_election : @string/str_follow_election}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>